--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -10,3 +10,19 @@
     margin-bottom: 20px;
     color: #4CAF50;
 }
+
+.home-container {
+  width: 100%;
+  min-height: calc(100vh - 150px);
+  margin-top: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0;
+}
+
+.home-container h1 {
+  font-size: 3rem;
+  color: #333;
+  text-align: center;
+}
